--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "nats-mcp",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
+  "description": "NATS MCP server for AI assistants",
+  "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node build/index.js"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.12.0",
-    "nats": "^2.29.3"
+    "@modelcontextprotocol/sdk": "^0.1.0",
+    "nats": "^2.16.0",
+    "zod": "^3.22.4"
+  },
+  "optionalDependencies": {
+    "@google-cloud/storage": "^7.7.0"
   },
   "devDependencies": {
-    "@types/node": "^22.15.21",
-    "typescript": "^5.8.3"
+    "@types/node": "^20.11.0",
+    "typescript": "^5.3.3"
   }
 }
