--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.1.0",
+    "@modelcontextprotocol/sdk": "^1.12.0",
     "nats": "^2.16.0",
     "zod": "^3.22.4"
   },
   "optionalDependencies": {
-    "@google-cloud/storage": "^7.7.0"
+    "@google-cloud/storage": "^7.7.0",
+    "express": "^4.18.2",
+    "@types/express": "^4.17.21"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
