--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   },
   "optionalDependencies": {
     "@google-cloud/storage": "^7.7.0",
-    "express": "^4.18.2",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4",
     "typescript": "^5.3.3"
   }
 }
