--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
     "compilerOptions": {
+      "target": "ES2020",
+      "module": "commonjs",
       "outDir": "./build",
       "rootDir": "./src",
-      "moduleResolution": "node",
-      "module": "es2022",
-      "target": "es2022", 
       "strict": true,
       "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
       "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true
+      "moduleResolution": "node",
+      "resolveJsonModule": true,
+      "sourceMap": true,
+      "declaration": false
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "build"]
   }
